--- a/Therapies.html
+++ b/Therapies.html
@@ -67,7 +67,7 @@
         
     </script>-->
 
-    <form method="post" action="./Therapies.aspx" id="form1">
+    <form method="post" action="./Therapies.html" id="form1">
 <div class="aspNetHidden">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="bGtdqacf4hHLl3SmPmDH9bqu7QXj8RwqWVf3pHG42QSN0f1X7GiMs/VRPX/6EXiA9DbxWK+zX2ndscQiDKIdenVgCHs2MK6mhXWFkV/NJ40=" />
 </div>
@@ -123,7 +123,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label3">Duração: 3h <br /> Valor: €150</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label13">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label13">Marcações</span>)</a>
 
                                 </div>
                             </div>
@@ -137,7 +137,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                     <tr>
                         <td colspan="2">
                             <h2>
-                                <div id="ContentPlaceHolder1_modaldiv" data-toggle="modal" data-target="#myModal" class="open-AddDialog btn" data-id="Numa sessão o consulente irá ter assistencia numa questão. Esta questão poderá ser algo em particular ou geral. Dependendo do assunto uma ou mais leituras se processam de acordo com o necessário. Esta consulta tem uma duração de uma hora aproximadamente, mas se a questão não for resolvida no momento o tempo poderá extender-se durante mais tempo. &lt;br/> Para mais informações sobre o meu método poderá entrar na secção &lt;a href=&quot;Transcendental_tarot.aspx&quot;>Tarot Transcendental&lt;/a>" data-title="Tarot Transcendental" data-money="Duração: 60m-90m &lt;br /> Valor: €40">
+                                <div id="ContentPlaceHolder1_modaldiv" data-toggle="modal" data-target="#myModal" class="open-AddDialog btn" data-id="Numa sessão o consulente irá ter assistencia numa questão. Esta questão poderá ser algo em particular ou geral. Dependendo do assunto uma ou mais leituras se processam de acordo com o necessário. Esta consulta tem uma duração de uma hora aproximadamente, mas se a questão não for resolvida no momento o tempo poderá extender-se durante mais tempo. &lt;br/> Para mais informações sobre o meu método poderá entrar na secção &lt;a href=&quot;Transcendental_tarot.html&quot;>Tarot Transcendental&lt;/a>" data-title="Tarot Transcendental" data-money="Duração: 60m-90m &lt;br /> Valor: €40">
                                 <span id="ContentPlaceHolder1_id2" class="text-primary">Tarot Transcendental</span>
                                 
                              &nbsp;&nbsp; <div class="glyphicon glyphicon-info-sign">info</div></div></h2>
@@ -145,7 +145,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label6">Duração: 60m-90m <br /> Valor: €40</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label14">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label14">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -178,7 +178,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label9">Duração: 60m-120m <br /> Valor: €160</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label16">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label16">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -200,7 +200,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label7">Duração: 1h <br /> Valor: €30</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label15">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label15">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -232,7 +232,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label5">Duração: 2h <br /> Valor: €100</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label17">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label17">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -252,7 +252,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label10">Duração: - depende - <br /> Valor: €200</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label18">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label18">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -284,7 +284,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                                 <div class="well">
                                     <span id="ContentPlaceHolder1_Label12">Duração: - depende - <br /> Valor: - a combinar -</span>
                                     <br />
-                                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label19">Marcações</span>)</a>
+                                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label19">Marcações</span>)</a>
                                 </div>
                             </div>
                         </td>
@@ -316,11 +316,11 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                     </h3>
                 </div>
                 <div class="modal-body">
-                    <span id="ContentPlaceHolder1_lbl_value_modal">Numa sessão o consulente irá ter assistencia numa questão. Esta questão poderá ser algo em particular ou geral. Dependendo do assunto uma ou mais leituras se processam de acordo com o necessário. Esta consulta tem uma duração de uma hora aproximadamente, mas se a questão não for resolvida no momento o tempo poderá extender-se durante mais tempo. <br/> Para mais informações sobre o meu método poderá entrar na secção <a href="Transcendental_tarot.aspx">Tarot Transcendental</a></span>
+                    <span id="ContentPlaceHolder1_lbl_value_modal">Numa sessão o consulente irá ter assistencia numa questão. Esta questão poderá ser algo em particular ou geral. Dependendo do assunto uma ou mais leituras se processam de acordo com o necessário. Esta consulta tem uma duração de uma hora aproximadamente, mas se a questão não for resolvida no momento o tempo poderá extender-se durante mais tempo. <br/> Para mais informações sobre o meu método poderá entrar na secção <a href="Transcendental_tarot.html">Tarot Transcendental</a></span>
                     <br />
                     <span id="ContentPlaceHolder1_lbl_money_modal">Duração: 60m-90m <br /> Valor: €40</span>
                     <br />
-                    <a href="Contacts.aspx">(<span id="ContentPlaceHolder1_Label23">Marcações</span>)</a>
+                    <a href="Contacts.html">(<span id="ContentPlaceHolder1_Label23">Marcações</span>)</a>
                 </div>
 
                 <div class="modal-footer">
@@ -346,7 +346,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="Home.aspx">
+                        <a class="navbar-brand" href="Home.html">
                             <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
                         </a>
                     </div>
@@ -354,19 +354,19 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="nav" class="nav navbar-nav">
-                            <li><a class="btn1" href="index.aspx">
+                            <li><a class="btn1" href="index.html">
                                 <span>Home</span></a></li>
-                            <li><a class="btn1" href="What_is_tarot.aspx">
+                            <li><a class="btn1" href="What_is_tarot.html">
                                 <span id="Label1">Tarot</span></a></li>
-                            <li><a class="btn1" href="Transcendental_tarot.aspx">
+                            <li><a class="btn1" href="Transcendental_tarot.html">
                                 <span id="Label2">Transcendental</span></a></li>
-                            <!--<li><a class="btn1" href="Who_is_it_for.aspx">
+                            <!--<li><a class="btn1" href="Who_is_it_for.html">
                                 <span id="Label3">Abordagem</span></a></li>-->
-                            <li><a class="btn1" href="Therapies.aspx">
+                            <li><a class="btn1" href="Therapies.html">
                                 <span id="Label4">Serviços</span></a></li>
-                            <li><a class="btn1" href="Zephyr.aspx">
+                            <li><a class="btn1" href="Zephyr.html">
                                 <span id="Label5">Zephyr</span></a></li>
-                            <li><a class="btn1" href="Contacts.aspx">
+                            <li><a class="btn1" href="Contacts.html">
                                 <span id="Label6">Marcações</span></a></li>
                         </ul>
                         <p class="navbar-right h">Zephyr html</p>
