--- a/What_is_tarot.html
+++ b/What_is_tarot.html
@@ -67,7 +67,7 @@
         
     </script>-->
 
-    <form method="post" action="./What_is_tarot.aspx" id="form1">
+    <form method="post" action="./What_is_tarot.html" id="form1">
 <div class="aspNetHidden">
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="bN8qKouvnmOndpARkdAly3IV3YuEOm1v/7fQHYj5o8S7dztRhhge/FaUrf/KBzYoiccKznIKbC1PFmIpd2j6LQPOCjMoCvRZbdSrKTnP9PQ=" />
 </div>
@@ -122,7 +122,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="Home.aspx">
+                        <a class="navbar-brand" href="Home.html">
                             <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
                         </a>
                     </div>
@@ -130,19 +130,19 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="nav" class="nav navbar-nav">
-                            <li><a class="btn1" href="index.aspx">
+                            <li><a class="btn1" href="index.html">
                                 <span>Home</span></a></li>
-                            <li><a class="btn1" href="What_is_tarot.aspx">
+                            <li><a class="btn1" href="What_is_tarot.html">
                                 <span id="Label1">Tarot</span></a></li>
-                            <li><a class="btn1" href="Transcendental_tarot.aspx">
+                            <li><a class="btn1" href="Transcendental_tarot.html">
                                 <span id="Label2">Transcendental</span></a></li>
-                            <!--<li><a class="btn1" href="Who_is_it_for.aspx">
+                            <!--<li><a class="btn1" href="Who_is_it_for.html">
                                 <span id="Label3">Abordagem</span></a></li>-->
-                            <li><a class="btn1" href="Therapies.aspx">
+                            <li><a class="btn1" href="Therapies.html">
                                 <span id="Label4">Serviços</span></a></li>
-                            <li><a class="btn1" href="Zephyr.aspx">
+                            <li><a class="btn1" href="Zephyr.html">
                                 <span id="Label5">Zephyr</span></a></li>
-                            <li><a class="btn1" href="Contacts.aspx">
+                            <li><a class="btn1" href="Contacts.html">
                                 <span id="Label6">Marcações</span></a></li>
                         </ul>
                         <p class="navbar-right h">Zephyr html</p>
