--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 
 
-<!DOCTYPE html><meta charset="uft-8">
+<!DOCTYPE html>
+<meta charset="uft-8">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
