--- a/Transcendental_tarot.html
+++ b/Transcendental_tarot.html
@@ -6,7 +6,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
 	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
-</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr html, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -16,7 +16,7 @@
     <script src="js/wow.min.js"></script>
     
     
-    <title>Zephyr html - Home</title>
+    <title>Zephyr Awakening - Home</title>
 
                 <script type="text/javascript">
                     $(document).ready(function () {
@@ -89,7 +89,7 @@
                     <tr>
                         <td>
                             <!--<div class="parallax-window" data-parallax="scroll" data-image-src="./images/zephyr-html-transcendental-tarot-transcendental.png"></div>-->
-                            <img id="ContentPlaceHolder1_Image1" class="img" src="images/zephyr-html-transcendental-tarot-transcendental.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" align="middle" style="width:90%;" />
+                            <img id="ContentPlaceHolder1_Image1" class="img" src="images/zephyr-awakening-transcendental-tarot-transcendental.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" align="middle" style="width:90%;" />
                                                         </td>
                         <td>
                              <h1 >
@@ -173,7 +173,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                         </td>
                         <td colspan="2" style="vertical-align: top;">
                             <a role="button" data-toggle="collapse" href="#secondExplanation" aria-expanded="false" aria-controls="collapseExample">
-                                <img src="images/zephyr-html-transcendental-tarot-crowley.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                                <img src="images/zephyr-awakening-transcendental-tarot-crowley.png" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
 
                             </a>
                         </td>
@@ -254,7 +254,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
                         </a>
                     </div>
 
