--- a/Therapies.html
+++ b/Therapies.html
@@ -1,12 +1,13 @@
 
 
 
-<!DOCTYPE html><meta charset="utf-8">
+<!DOCTYPE html>
+<meta charset="utf-8">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
 	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
-</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr html, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+</title><meta charset="utf-8" name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -347,7 +348,7 @@ Esta leitura também é boa para quem acha que a sua espiral está a mover-se depre
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
                         </a>
                     </div>
 
