--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <title>
 	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
-</title><meta name="description" content="Tarot em Lisboa, Tarot por skype, zephyr html, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+</title><meta name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -19,7 +19,7 @@
     <script src="js/wow.min.js"></script>
     
     
-    <title>Zephyr html - Home</title>
+    <title>Zephyr Awakening - Home</title>
 
                 <script type="text/javascript">
                     $(document).ready(function () {
@@ -260,7 +260,7 @@ O Tarot tem uma história milenar... Descubra o que é o Tarot e de onde vem.</spa
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="Home.html">
-                            <img src="images/zephyr-html-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
+                            <img src="images/zephyr-awakening-transcendental-tarot-ouroborus.png" class="img-small" alt="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
                         </a>
                     </div>
 
