--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 
 
 <!DOCTYPE html>
-<meta charset="utf-8"/>
+<meta charset="utf-8">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-
+<meta charset="utf-8">
 <title>
-	Zephyr html > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
+	Zephyr Awakening > Tarot Transcendental - Ensino Tarot - Guia -Amor e Compaixão - Vida 
 </title><meta name="description" content="Tarot em Lisboa, Tarot por skype, zephyr awakening, zephyr, mapa de emoções, guia em tarot, suporte energético, amor e compaixão, tarot transcendental, tarot de crowley, terapia, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" /><meta charset="utf-8" id="Meta1" name="keywords" content="tarot, lisboa, skype, zephyr, mapa, guia, amor, tarot transcendental, crowley, tarot terapeutico, aprender tarot, ensino de tarot, serviços de tarot" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-1.11.3.min.js"></script>
@@ -48,6 +48,7 @@
                 </script>
 </head>
 <body>
+<meta charset="utf-8">
     <script>
         new WOW().init();    
         $(document).ready(function () {
@@ -282,7 +283,7 @@ O Tarot tem uma história milenar... Descubra o que é o Tarot e de onde vem.</spa
                             <li><a class="btn1" href="Contacts.html">
                                 <span id="Label6">Marcações</span></a></li>
                         </ul>
-                        <p class="navbar-right h">Zephyr html</p>
+                        <p class="navbar-right h">Zephyr Awakening</p>
                     </div>
 
                     <!-- /.navbar-collapse -->
